# rose_luctor

luctor_classes/: CMakeLists.txt  package.xml
luctor_classes/include/: bounding_box.hpp  item.hpp  luctor_base_class.hpp  person.hpp
luctor_classes/include/item/: item.hpp
luctor_classes/include/person/: person.hpp
luctor_classes/include/resource/: resource.hpp
luctor_classes/include/script/: script.hpp
luctor_classes/include/waypoint/: waypoint.hpp
luctor_classes/src/: bounding_box.cpp  item.cpp  luctor_base_class.cpp  person.cpp  resource.cpp  script.cpp  waypoint.cpp
rose_luctor/: CMakeLists.txt  package.xml
