<?xml version="1.0"?>
<package>
  <name>luctor_classes</name>
  <version>0.0.0</version>
  <description>The luctor_classes package</description>
  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscomm</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_conversions</build_depend>
  
  <run_depend>roscomm</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_conversions</run_depend>

  <export>
  </export>
</package>